# ml_blueprint

./: .gitignore  dvc.yaml  pyproject.toml
data/raw/: norway_new_car_sales_by_make.csv.dvc
src/ml_project/: __init__.py  main.py
src/ml_project/config/: args_parser.py  env_vars.py  logging.py
src/ml_project/data/: data_loader.py
src/ml_project/features/: preprocessing.py
src/ml_project/mlflow/: tempCodeRunnerFile.py  tracking.py
src/ml_project/models/: train.py
src/ml_project/pipelines/: training_pipeline.py
tests/test_ml_project/: test_main.py
